Update readme with gradle install instruction